modules/lib/dependencies/libopus/cobalt_opus_shim.h

/**
 * Pins the encoder's coded bandpass to a specific value.
 *
 * Applies OPUS_SET_BANDWIDTH through opus_encoder_ctl. Most callers should
 * instead leave this at COBALT_OPUS_AUTO and bound the bandwidth with
 * cobalt_opus_encoder_set_max_bandwidth.
 *
 * @param enc       the encoder handle from cobalt_opus_encoder_create.
 * @param bandwidth COBALT_OPUS_AUTO or one of the COBALT_OPUS_BANDWIDTH_*
 *                  selectors.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_bandwidth(void *enc, int32_t bandwidth);
/**
 * Sets the maximum bandpass the encoder may select automatically.
 *
 * Applies OPUS_SET_MAX_BANDWIDTH through opus_encoder_ctl. Unlike
 * cobalt_opus_encoder_set_bandwidth, this leaves the encoder free to reduce the
 * bandpass when the bitrate becomes too low.
 *
 * @param enc       the encoder handle from cobalt_opus_encoder_create.
 * @param bandwidth one of the COBALT_OPUS_BANDWIDTH_* selectors.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_max_bandwidth(void *enc, int32_t bandwidth);
/**
 * Selects the encoder's use of variable-duration frames.
 *
 * Applies OPUS_SET_EXPERT_FRAME_DURATION through opus_encoder_ctl. When set to
 * anything other than COBALT_OPUS_FRAMESIZE_ARG the encoder is free to emit a
 * shorter frame than requested and the caller must inspect the encoded TOC.
 *
 * @param enc           the encoder handle from cobalt_opus_encoder_create.
 * @param frameDuration COBALT_OPUS_FRAMESIZE_ARG or one of the
 *                      COBALT_OPUS_FRAMESIZE_*_MS selectors.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_expert_frame_duration(void *enc, int32_t frameDuration);
/**
 * Enables or disables the encoder's use of inter-frame prediction.
 *
 * Applies OPUS_SET_PREDICTION_DISABLED through opus_encoder_ctl. Disabling
 * prediction makes frames nearly independent at a quality cost.
 *
 * @param enc      the encoder handle from cobalt_opus_encoder_create.
 * @param disabled 1 to disable prediction, 0 to enable it (the default).
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_prediction_disabled(void *enc, int32_t disabled);
/**
 * Reads the total codec lookahead, in samples, the encoder adds.
 *
 * Applies OPUS_GET_LOOKAHEAD through opus_encoder_ctl. The value lets a caller
 * align encoder input and decoder output by skipping this many samples.
 *
 * @param enc the encoder handle from cobalt_opus_encoder_create.
 * @param out receives the lookahead sample count on success; must not be NULL.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL argument,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_get_lookahead(void *enc, int32_t *out);
/**
 * Resets the encoder to a freshly initialized state.
 *
 * Applies OPUS_RESET_STATE through opus_encoder_ctl, clearing the encode history
 * without changing the sampling rate, channel count or application mode.
 *
 * @param enc the encoder handle from cobalt_opus_encoder_create.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_reset_state(void *enc);
/**
 * Creates and initializes a libopus decoder for one stream.
 *
 * Forwards to opus_decoder_create with the supplied sampling rate and channel
 * count. The created decoder is returned through outDec as an opaque handle.
 *
 * @param fs       the output sampling rate in hertz; one of 8000, 12000, 16000,
 *                 24000 or 48000.
 * @param channels the number of channels to decode, 1 or 2.
 * @param outDec   receives the created decoder handle on success, or is left
 *                 holding NULL on failure; must not be NULL.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL outDec,
 *         otherwise the libopus error code from opus_decoder_create.
 */
int32_t cobalt_opus_decoder_create(int32_t fs, int32_t channels, void **outDec);