modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/audio/codec/opus/bindings/CobaltOpus.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_bandwidth$address() {
        return cobalt_opus_encoder_set_bandwidth.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static int cobalt_opus_encoder_set_bandwidth(MemorySegment enc, int bandwidth) {
        var mh$ = cobalt_opus_encoder_set_bandwidth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_bandwidth", enc, bandwidth);
            }
            return (int)mh$.invokeExact(enc, bandwidth);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_max_bandwidth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_max_bandwidth");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_max_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_max_bandwidth$descriptor() {
        return cobalt_opus_encoder_set_max_bandwidth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_max_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_max_bandwidth$handle() {
        return cobalt_opus_encoder_set_max_bandwidth.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_max_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_max_bandwidth$address() {
        return cobalt_opus_encoder_set_max_bandwidth.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_max_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static int cobalt_opus_encoder_set_max_bandwidth(MemorySegment enc, int bandwidth) {
        var mh$ = cobalt_opus_encoder_set_max_bandwidth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_max_bandwidth", enc, bandwidth);
            }
            return (int)mh$.invokeExact(enc, bandwidth);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_expert_frame_duration {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_expert_frame_duration");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_expert_frame_duration(void *enc, int32_t frameDuration)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_expert_frame_duration$descriptor() {
        return cobalt_opus_encoder_set_expert_frame_duration.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_expert_frame_duration(void *enc, int32_t frameDuration)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_expert_frame_duration$handle() {
        return cobalt_opus_encoder_set_expert_frame_duration.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_expert_frame_duration(void *enc, int32_t frameDuration)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_expert_frame_duration$address() {
        return cobalt_opus_encoder_set_expert_frame_duration.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_expert_frame_duration(void *enc, int32_t frameDuration)
     * }
     */
    public static int cobalt_opus_encoder_set_expert_frame_duration(MemorySegment enc, int frameDuration) {
        var mh$ = cobalt_opus_encoder_set_expert_frame_duration.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_expert_frame_duration", enc, frameDuration);
            }
            return (int)mh$.invokeExact(enc, frameDuration);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_prediction_disabled {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_prediction_disabled");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_prediction_disabled(void *enc, int32_t disabled)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_prediction_disabled$descriptor() {
        return cobalt_opus_encoder_set_prediction_disabled.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_prediction_disabled(void *enc, int32_t disabled)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_prediction_disabled$handle() {
        return cobalt_opus_encoder_set_prediction_disabled.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_prediction_disabled(void *enc, int32_t disabled)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_prediction_disabled$address() {
        return cobalt_opus_encoder_set_prediction_disabled.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_prediction_disabled(void *enc, int32_t disabled)
     * }
     */
    public static int cobalt_opus_encoder_set_prediction_disabled(MemorySegment enc, int disabled) {
        var mh$ = cobalt_opus_encoder_set_prediction_disabled.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_prediction_disabled", enc, disabled);
            }
            return (int)mh$.invokeExact(enc, disabled);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_get_lookahead {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_get_lookahead");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_get_lookahead(void *enc, int32_t *out)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_get_lookahead$descriptor() {
        return cobalt_opus_encoder_get_lookahead.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_get_lookahead(void *enc, int32_t *out)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_get_lookahead$handle() {
        return cobalt_opus_encoder_get_lookahead.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_get_lookahead(void *enc, int32_t *out)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_get_lookahead$address() {
        return cobalt_opus_encoder_get_lookahead.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_get_lookahead(void *enc, int32_t *out)
     * }
     */
    public static int cobalt_opus_encoder_get_lookahead(MemorySegment enc, MemorySegment out) {
        var mh$ = cobalt_opus_encoder_get_lookahead.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_get_lookahead", enc, out);
            }
            return (int)mh$.invokeExact(enc, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_reset_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_reset_state");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_reset_state(void *enc)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_reset_state$descriptor() {
        return cobalt_opus_encoder_reset_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_reset_state(void *enc)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_reset_state$handle() {
        return cobalt_opus_encoder_reset_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_reset_state(void *enc)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_reset_state$address() {
        return cobalt_opus_encoder_reset_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_reset_state(void *enc)
     * }
     */
    public static int cobalt_opus_encoder_reset_state(MemorySegment enc) {
        var mh$ = cobalt_opus_encoder_reset_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_reset_state", enc);
            }
            return (int)mh$.invokeExact(enc);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_decoder_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_INT,
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_decoder_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_decoder_create(int32_t fs, int32_t channels, void **outDec)
     * }
     */
    public static FunctionDescriptor cobalt_opus_decoder_create$descriptor() {
        return cobalt_opus_decoder_create.DESC;
    }
